@@ -174,3 +174,7 @@
 	  "wrapped" as character devices and mapped to stdin, stdout, and stderr.
 	  Now the telnet session can be inherited by spawned tasks.
 	* examples/telnetd:  Add a test for the new telnet daemon.
+	* examplex/telnetd/telnetd_driver.c: Move the internal socket structure from
+	  the daemon's socket array into the driver's state data so that it will be
+	  independent from the the telnetd daemon.
+
